--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,21 @@
-.App {
+.title {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap; 
+  gap: 16px; 
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.card {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: rgba(19, 68, 4, 0.671);
+  box-shadow: 2px 10px 20px rgba(0, 0, 0, 0.116);
+  border-radius: 20px;
+  padding: 15px;
+  margin: 10px;
+  width: 200px;
+  height: 250px;
 }
